RESTDemo migrated to Java 8